Add an agent to register with a server on the local network
This uploads the local device list to a central server, which allows managing
firmware in an enterprise. It's expected vendor-specific 'dashboards' will
provide the interface and consume this data.

An example dashboard implementation can be found on the LVFS.

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -383,11 +383,14 @@ done
 %{_datadir}/fwupd/add_capsule_header.py
 %{_datadir}/fwupd/install_dell_bios_exe.py
 %{_unitdir}/fwupd-offline-update.service
+%{_unitdir}/fwupdagent.service
+%{_unitdir}/fwupdagent.timer
 %{_unitdir}/fwupd.service
 %{_unitdir}/fwupd-refresh.service
 %{_unitdir}/fwupd-refresh.timer
 %{_presetdir}/fwupd-refresh.preset
 %{_unitdir}/system-update.target.wants/
+%config(noreplace)%{_sysconfdir}/fwupd/agent.conf
 %dir %{_localstatedir}/lib/fwupd
 %dir %{_localstatedir}/cache/fwupd
 %dir %{_datadir}/fwupd/quirks.d
