trivial: Fix lgtm build
bsdtar has migrated to libarchive-tools in eoan

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -5,8 +5,8 @@ extraction:
   cpp:
     prepare:
       packages:
-      - bsdtar
       - python3-gi
+      - libarchive-tools
       - libcogl-pango-dev
       - python3-pil
       - python3-cairo
