Use the system provided flashrom on Fedora

--- a/contrib/ci/Dockerfile-fedora.in
+++ b/contrib/ci/Dockerfile-fedora.in
@@ -7,6 +7,8 @@ RUN echo fubar > /etc/machine-id
 RUN dnf -y update
 RUN echo fubar > /etc/machine-id
 %%%INSTALL_DEPENDENCIES_COMMAND%%%
+RUN dnf -y update glib2 glib2-devel --releasever=32
+RUN dnf -y install flashrom-devel --enablerepo=updates-testing
 RUN mkdir /github/workspace
 WORKDIR /github/workspace
 COPY . .
