--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -67,6 +67,7 @@ BuildRequires: help2man
 BuildRequires: json-glib-devel >= %{json_glib_version}
 BuildRequires: vala
 BuildRequires: bash-completion
+BuildRequires: git-core
 
 %if 0%{?have_modem_manager}
 BuildRequires: ModemManager-glib-devel >= 1.10.0
@@ -201,12 +202,6 @@ Data files for installed tests.
 
 mkdir -p --mode=0700 $RPM_BUILD_ROOT%{_localstatedir}/lib/fwupd/gnupg
 
-# delete most files from the subproject
-rm ${RPM_BUILD_ROOT}%{_includedir}/libflashrom.h
-rm ${RPM_BUILD_ROOT}%{_libdir}/libflashrom.so
-rm ${RPM_BUILD_ROOT}%{_libdir}/pkgconfig/libflashrom.pc
-rm ${RPM_BUILD_ROOT}%{_sbindir}/flashrom
-
 %find_lang %{name}
 
 %post
@@ -331,9 +326,6 @@ rm ${RPM_BUILD_ROOT}%{_sbindir}/flashrom
 %if 0%{?have_uefi}
 %{_datadir}/locale/*/LC_IMAGES/fwupd*
 %endif
-
-# eww, but just until the Fedora package ships these...
-%{_libdir}/libflashrom.so.1*
 
 %files devel
 %{_datadir}/gir-1.0/Fwupd-2.0.gir
