--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -14,7 +14,6 @@
 %global enable_ci 0
 %global enable_tests 1
 %global enable_dummy 1
-%global enable_flashrom 1
 %global __meson_wrap_mode default
 
 # fwupd.efi is only available on these arches
@@ -73,6 +72,7 @@ BuildRequires: json-glib-devel >= %{json_glib_version}
 BuildRequires: vala
 BuildRequires: bash-completion
 BuildRequires: git-core
+BuildRequires: flashrom-devel >= 1.2-2
 
 %if 0%{?have_modem_manager}
 BuildRequires: ModemManager-glib-devel >= 1.10.0
@@ -165,11 +165,7 @@ Data files for installed tests.
 %else
     -Dplugin_dummy=false \
 %endif
-%if 0%{?enable_flashrom}
     -Dplugin_flashrom=true \
-%else
-    -Dplugin_flashrom=false \
-%endif
     -Dplugin_thunderbolt=true \
 %if 0%{?have_redfish}
     -Dplugin_redfish=true \
@@ -222,14 +218,6 @@ Data files for installed tests.
 %endif
 
 mkdir -p --mode=0700 $RPM_BUILD_ROOT%{_localstatedir}/lib/fwupd/gnupg
-
-%if 0%{?enable_flashrom}
-# delete most files from the subproject
-rm ${RPM_BUILD_ROOT}%{_includedir}/libflashrom.h
-rm ${RPM_BUILD_ROOT}%{_libdir}/libflashrom.so
-rm ${RPM_BUILD_ROOT}%{_libdir}/pkgconfig/flashrom.pc
-rm ${RPM_BUILD_ROOT}%{_sbindir}/flashrom
-%endif
 
 %find_lang %{name}
 
@@ -338,9 +326,7 @@ rm ${RPM_BUILD_ROOT}%{_sbindir}/flashrom
 %{_libdir}/fwupd-plugins-3/libfu_plugin_ebitdo.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_emmc.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_fastboot.so
-%if 0%{?enable_flashrom}
 %{_libdir}/fwupd-plugins-3/libfu_plugin_flashrom.so
-%endif
 %{_libdir}/fwupd-plugins-3/libfu_plugin_fresco_pd.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_jabra.so
 %if 0%{?have_modem_manager}
@@ -387,11 +373,6 @@ rm ${RPM_BUILD_ROOT}%{_sbindir}/flashrom
 %ghost %{_localstatedir}/lib/fwupd/gnupg
 %if 0%{?have_uefi}
 %{_datadir}/locale/*/LC_IMAGES/fwupd*
-%endif
-
-%if 0%{?enable_flashrom}
-# eww, but just until the Fedora package ships these...
-%{_libdir}/libflashrom.so.1*
 %endif
 
 %files devel
