--- a/meson.build
+++ b/meson.build
@@ -290,6 +290,8 @@ if build_standalone and get_option('plugin_uefi')
   efi_app_location = join_paths(libexecdir, 'fwupd', 'efi')
   conf.set_quoted ('EFI_APP_LOCATION', efi_app_location)
 
+  conf.set('EFI_OBJCOPY', get_option('efi-objcopy'))
+
   efi_arch = host_machine.cpu_family()
   if efi_arch == 'x86'
           EFI_MACHINE_TYPE_NAME = 'ia32'
