Enable github workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,5 @@
 version: 2
 jobs:
-  check-abi:
-    machine:
-      image: circleci/classic:latest
-    steps:
-      - checkout
-      - run:
-          name: "Build container"
-          command: OS=debian-x86_64 ./contrib/ci/generate_docker.py
-      - run:
-          name: "Run build script"
-          command: docker run -t -v `pwd`:/build fwupd-debian-x86_64 ./contrib/ci/check-abi $(git describe --abbrev=0 --tags) $(git rev-parse HEAD)
-
   build-ubuntu-x86_64:
     machine:
       image: circleci/classic:latest
@@ -19,10 +7,10 @@ jobs:
       - checkout
       - run:
           name: "Build container"
-          command: OS=ubuntu-x86_64 ./contrib/ci/generate_docker.py
+          command: OS=ubuntu-x86_64 ./contrib/ci/generate_docker.py build
       - run:
           name: "Run build script"
-          command: docker run --privileged -e CI=true -t -v `pwd`/dist:/build/dist fwupd-ubuntu-x86_64
+          command: docker run --privileged -e CI=true -t -v `pwd`/dist:/github/workspace/dist fwupd-ubuntu-x86_64
       - persist_to_workspace:
           root: .
           paths:
@@ -35,10 +23,10 @@ jobs:
       - checkout
       - run:
           name: "Build container"
-          command: OS=debian-x86_64 ./contrib/ci/generate_docker.py
+          command: OS=debian-x86_64 ./contrib/ci/generate_docker.py build
       - run:
           name: "Run build script"
-          command: docker run --privileged -e CI=true -t -v `pwd`/dist:/build/dist fwupd-debian-x86_64 ./contrib/ci/trust.sh
+          command: docker run --privileged -e CI=true -t -v `pwd`/dist:/github/workspace/dist fwupd-debian-x86_64 ./contrib/ci/trust.sh
 
   build-windows:
     docker:
@@ -175,7 +163,6 @@ workflows:
       - build-windows
       - build-ubuntu-x86_64
       - build-snap
-      - check-abi
       - build-chromeos-x86_64
       - publish-edge:
           requires:
