--- a/contrib/ci/Dockerfile-flatpak.in
+++ b/contrib/ci/Dockerfile-flatpak.in
@@ -6,7 +6,5 @@ ENV LC_ALL en_US.UTF-8
 RUN echo fubar > /etc/machine-id
 %%%INSTALL_DEPENDENCIES_COMMAND%%%
 RUN dnf --enablerepo=updates-testing -y update
-RUN mkdir /build
-WORKDIR /build
-COPY . .
+WORKDIR /github/workspace
 CMD ["./contrib/ci/flatpak.py"]
