--- a/contrib/ci/Dockerfile-fedora.in
+++ b/contrib/ci/Dockerfile-fedora.in
@@ -8,7 +8,7 @@ RUN dnf -y update
 RUN echo fubar > /etc/machine-id
 %%%INSTALL_DEPENDENCIES_COMMAND%%%
 RUN dnf -y update glib2 glib2-devel --releasever=32
-RUN mkdir /build
-WORKDIR /build
+RUN mkdir /github/workspace
+WORKDIR /github/workspace
 COPY . .
 CMD ["./contrib/ci/fedora.sh"]
