Enable github workflows instead of Travis workflows
Backport a series of patches from master->1_4_X->1_3X to squash
to do this.

--- a/contrib/ci/Dockerfile-debian.in
+++ b/contrib/ci/Dockerfile-debian.in
@@ -17,7 +17,5 @@ RUN cat /etc/apt/preferences
 RUN echo fubar > /etc/machine-id
 %%%ARCH_SPECIFIC_COMMAND%%%
 %%%INSTALL_DEPENDENCIES_COMMAND%%%
-RUN mkdir /build
-WORKDIR /build
-COPY . .
+WORKDIR /github/workspace
 CMD ["./contrib/ci/debian.sh"]
