--- a/contrib/ci/Dockerfile-fedora.in
+++ b/contrib/ci/Dockerfile-fedora.in
@@ -7,7 +7,7 @@ RUN echo fubar > /etc/machine-id
 RUN dnf -y update
 RUN echo fubar > /etc/machine-id
 %%%INSTALL_DEPENDENCIES_COMMAND%%%
-RUN mkdir /build
-WORKDIR /build
+RUN mkdir /github/workspace
+WORKDIR /github/workspace
 COPY . .
 CMD ["./contrib/ci/fedora.sh"]
