--- a/contrib/ci/Dockerfile-ubuntu.in
+++ b/contrib/ci/Dockerfile-ubuntu.in
@@ -4,7 +4,5 @@ ENV CC clang-6.0
 RUN echo fubar > /etc/machine-id
 %%%ARCH_SPECIFIC_COMMAND%%%
 %%%INSTALL_DEPENDENCIES_COMMAND%%%
-RUN mkdir /build
-WORKDIR /build
-COPY . .
+WORKDIR /github/workspace
 CMD ["./contrib/ci/ubuntu.sh"]
