trivial: bind mount checkout for circle builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: OS=ubuntu-x86_64 ./contrib/ci/generate_docker.py build
       - run:
           name: "Run build script"
-          command: docker run --privileged -e CI=true -t -v `pwd`/dist:/github/workspace/dist fwupd-ubuntu-x86_64
+          command: docker run --privileged -e CI=true -t -v `pwd`:/github/workspace fwupd-ubuntu-x86_64
       - persist_to_workspace:
           root: .
           paths:
@@ -26,7 +26,7 @@ jobs:
           command: OS=debian-x86_64 ./contrib/ci/generate_docker.py build
       - run:
           name: "Run build script"
-          command: docker run --privileged -e CI=true -t -v `pwd`/dist:/github/workspace/dist fwupd-debian-x86_64 ./contrib/ci/trust.sh
+          command: docker run --privileged -e CI=true -t -v `pwd`:/github/workspace  fwupd-debian-x86_64 ./contrib/ci/trust.sh
 
   build-windows:
     docker:
