--- a/plugins/synaptics-rmi/meson.build
+++ b/plugins/synaptics-rmi/meson.build
@@ -8,14 +8,14 @@ shared_module('fu_plugin_synaptics_rmi',
   fu_hash,
   sources : [
     'fu-plugin-synaptics-rmi.c',
-    'fu-synaptics-rmi-common.c',
+    'fu-synaptics-rmi-common.c',      # fuzzing
     'fu-synaptics-rmi-device.c',
     'fu-synaptics-rmi-hid-device.c',
     'fu-synaptics-rmi-ps2-device.c',
     'fu-synaptics-rmi-v5-device.c',
     'fu-synaptics-rmi-v6-device.c',
     'fu-synaptics-rmi-v7-device.c',
-    'fu-synaptics-rmi-firmware.c',
+    'fu-synaptics-rmi-firmware.c',    # fuzzing
   ],
   include_directories : [
     root_incdir,
