Install the UX data into a single .tar.xz file
This allows much better compression (-60%) than gziping them individually and
also allows us to build the capsule UX images as part of the build stage.

Also add more popular screen resolutions for laptops you can buy in 2021.

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -452,7 +452,7 @@ done
 %{_libdir}/fwupd-plugins-3/libfu_plugin_goodixmoc.so
 %ghost %{_localstatedir}/lib/fwupd/gnupg
 %if 0%{?have_uefi}
-%{_datadir}/locale/*/LC_IMAGES/fwupd*
+%{_datadir}/fwupd/ux-capsule.tar.xz
 %endif
 
 %if 0%{?have_modem_manager}
