--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -144,6 +144,9 @@ Recommends: %{name}-plugin-modem-manager
 %if 0%{?have_flashrom}
 Recommends: %{name}-plugin-flashrom
 %endif
+%if 0%{?have_uefi}
+Recommends: %{name}-plugin-uefi-capsule-data
+%endif
 
 %description
 fwupd is a daemon to allow session software to update device firmware.
@@ -179,6 +182,17 @@ Summary: fwupd plugin using flashrom
 %description plugin-flashrom
 This provides the optional package which is only required on hardware that
 can be flashed using flashrom. It is probably not required on servers.
+%endif
+
+%if 0%{?have_uefi}
+%package plugin-uefi-capsule-data
+Summary: Localized data for the UEFI UX capsule
+
+%description plugin-uefi-capsule-data
+This provides the pregenerated BMP artwork for the UX capsule, which allows the
+"Installing firmware update…" localized text to be shown during a UEFI firmware
+update operation. This subpackage is probably not required on embedded hardware
+or server machines.
 %endif
 
 %prep
@@ -451,9 +465,6 @@ done
 %{_libdir}/fwupd-plugins-3/libfu_plugin_wacom_usb.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_goodixmoc.so
 %ghost %{_localstatedir}/lib/fwupd/gnupg
-%if 0%{?have_uefi}
-%{_datadir}/fwupd/ux-capsule.tar.xz
-%endif
 
 %if 0%{?have_modem_manager}
 %files plugin-modem-manager
@@ -462,6 +473,10 @@ done
 %if 0%{?have_flashrom}
 %files plugin-flashrom
 %{_libdir}/fwupd-plugins-3/libfu_plugin_flashrom.so
+%endif
+%if 0%{?have_uefi}
+%files plugin-uefi-capsule-data
+%{_datadir}/fwupd/uefi-capsule-ux.tar.xz
 %endif
 
 %files devel
