--- a/debian/control.in
+++ b/debian/control.in
@@ -119,6 +119,10 @@ Architecture: linux-any
 Multi-Arch: same
 Depends: libfwupd2 (= ${binary:Version}),
          gir1.2-fwupd-2.0 (= ${binary:Version}),
+         libcurl4-gnutls-dev,
+         libglib2.0-dev (>= 2.45.8),
+         libjcat-dev,
+         libjson-glib-dev (>= 1.1.1),
          ${misc:Depends}
 Breaks: fwupd-dev (<< 0.5.4-2~)
 Replaces: fwupd-dev (<< 0.5.4-2~)
@@ -149,6 +153,17 @@ Architecture: linux-any
 Multi-Arch: same
 Depends: libfwupdplugin1 (= ${binary:Version}),
          gir1.2-fwupdplugin-1.0 (= ${binary:Version}),
+         libarchive-dev,
+         libcurl4-gnutls-dev,
+         libfwupd-dev (= ${binary:Version}),
+         libgcab-dev,
+         libglib2.0-dev (>= 2.45.8),
+         libgudev-1.0-dev,
+         libgusb-dev (>= 0.3.5),
+         libjcat-dev,
+         libjson-glib-dev (>= 1.1.1),
+         libxmlb-dev (>= 0.1.13),
+         valgrind [!ia64 !riscv64 !x32 !mips !sparc64 !sh4 !ppc64 !powerpcspe !hppa !alpha !mips64el !armhf !armel !mipsel !m68k],
          ${misc:Depends}
 Section: libdevel
 Description: development files for libfwupdplugin
