Use FWUPD_COMPILATION define to indicate an in tree build
When this is done, include:
* Including the hash
* Including anything that is not ABI stable in plugins yet

Suggested-by: Simon McVittie <smcv@debian.org>

--- a/meson.build
+++ b/meson.build
@@ -147,6 +147,8 @@ add_project_link_arguments(
   language: 'c'
 )
 
+add_project_arguments('-DFWUPD_COMPILATION', language : 'c')
+
 # Needed for realpath(), syscall(), cfmakeraw(), etc.
 add_project_arguments('-D_DEFAULT_SOURCE', language : 'c')
 
