system76-launch: Add a plugin for the System76 Launch Configurable Keyboard
This plugin supports reading the keyboard firmware version at runtime and
rebooting the keyboard to USB DFU mode. Tested with firmware uploaded to
embargo-system76.

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -25,6 +25,7 @@ subdir('ata')
 subdir('elantp')
 subdir('optionrom')
 subdir('superio')
+subdir('system76-launch')
 subdir('thelio-io')
 subdir('wacom-raw')
 endif
