--- a/libfwupdplugin/meson.build
+++ b/libfwupdplugin/meson.build
@@ -13,6 +13,7 @@ fwupdplugin_src = [
   'fu-firmware.c',
   'fu-firmware-common.c',
   'fu-firmware-image.c',
+  'fu-dfuse-firmware.c',
   'fu-fmap-firmware.c',
   'fu-hwids.c',
   'fu-ihex-firmware.c',
@@ -48,6 +49,7 @@ fwupdplugin_headers = [
   'fu-firmware-common.h',
   'fu-firmware-image.h',
   'fu-fmap-firmware.h',
+  'fu-dfuse-firmware.h',
   'fu-hwids.h',
   'fu-ihex-firmware.h',
   'fu-io-channel.h',
