--- a/contrib/debian/control.in
+++ b/contrib/debian/control.in
@@ -53,6 +53,7 @@ Recommends: python3,
 	    secureboot-db,
 	    udisks2,
 	    fwupd-signed
+Suggests: gir1.2-fwupd-2.0
 Provides: fwupdate
 Conflicts: fwupdate-amd64-signed,
 	   fwupdate-i386-signed,
