fmap: Use memmem to find the FMAP signature
Trust glibc to optimize for the binary search, removing a oss-fuzz detected
crash with our bad pointer maths.

--- a/meson.build
+++ b/meson.build
@@ -319,6 +319,9 @@ endif
 if cc.has_function('realpath')
   conf.set('HAVE_REALPATH', '1')
 endif
+if cc.has_function('memmem')
+  conf.set('HAVE_MEMMEM', '1')
+endif
 if cc.has_function('sigaction')
   conf.set('HAVE_SIGACTION', '1')
 endif
