--- a/plugins/uefi-capsule/efi/meson.build
+++ b/plugins/uefi-capsule/efi/meson.build
@@ -155,8 +155,8 @@ so = custom_target('fwup.so',
                              ['-lefi', '-lgnuefi', libgcc_file_name])
 
 # sanity check the packager set this to *SOMETHING*
-if get_option('efi_os_dir') == '' and get_option('supported_build')
-    error('-Defi_os_dir is unset, see plugins/uefi-capsule/README.md')
+if get_option('efi_sbat_distro_id') == '' and get_option('supported_build')
+    error('-Defi_sbat_distro_id is unset, see plugins/uefi-capsule/README.md')
 endif
 
 app = custom_target(efi_name,
@@ -171,7 +171,7 @@ app = custom_target(efi_name,
                       '--project-version', meson.project_version(),
                       '--sbat-version', '1',
                       '--sbat-generation', '@0@'.format(get_option('efi_sbat_fwupd_generation')),
-                      '--sbat-distro-id', get_option('efi_os_dir'),
+                      '--sbat-distro-id', get_option('efi_sbat_distro_id'),
                       '--sbat-distro-generation', '0',
                       '--sbat-distro-summary', get_option('efi_sbat_distro_summary'),
                       '--sbat-distro-pkgname', get_option('efi_sbat_distro_pkgname'),
