trivial: Untie efi_os_dir from the SBAT distro ID
We happily fallback with an unset -Defi_os_dir and it gets confusing explaining
why the EFI dir needs to be set on a non-supported system.

In practice they'll probably have the same eventual value on most supported
distributions.

Fixes https://github.com/fwupd/fwupd/issues/2873

--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -20,7 +20,7 @@ build() {
         export CI="--wrap-mode=default"
     fi
     arch-meson -D b_lto=false $CI ../build \
-        -Defi_os_dir="arch" \
+        -Defi_sbat_distro_id="arch" \
         -Defi_sbat_distro_summary="Arch Linux" \
         -Defi_sbat_distro_pkgname="${pkgname}" \
         -Defi_sbat_distro_version="$(pkgver)" \
