trivial: Untie efi_os_dir from the SBAT distro ID
We happily fallback with an unset -Defi_os_dir and it gets confusing explaining
why the EFI dir needs to be set on a non-supported system.

In practice they'll probably have the same eventual value on most supported
distributions.

Fixes https://github.com/fwupd/fwupd/issues/2873

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -176,7 +176,7 @@ Data files for installed tests.
     -Dplugin_uefi=true \
     -Dplugin_nvme=true \
     -Dplugin_tpm=true \
-    -Defi_os_dir="fedora" \
+    -Defi_sbat_distro_id="fedora" \
     -Defi_sbat_distro_summary="The Fedora Project" \
     -Defi_sbat_distro_pkgname="%{name}" \
     -Defi_sbat_distro_version="%{version}" \
