trivial: Untie efi_os_dir from the SBAT distro ID
We happily fallback with an unset -Defi_os_dir and it gets confusing explaining
why the EFI dir needs to be set on a non-supported system.

In practice they'll probably have the same eventual value on most supported
distributions.

Fixes https://github.com/fwupd/fwupd/issues/2873

--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -23,7 +23,7 @@ ifeq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
 	SB_STYLE := ubuntu
 	tar_name := fwupd_$(deb_version)_$(DEB_HOST_ARCH).tar.gz
 	CONFARGS += -Dplugin_flashrom=false
-	CONFARGS += -Defi_os_dir=ubuntu
+	CONFARGS += -Defi_sbat_distro_id=ubuntu
 	CONFARGS += -Defi_sbat_distro_summary=Ubuntu
 	CONFARGS += -Defi_sbat_distro_pkgname=fwupd
 	CONFARGS += -Defi_sbat_distro_version=$(deb_version)
@@ -35,7 +35,7 @@ else
 	else
 		CONFARGS += -Dplugin_flashrom=false
 	endif
-	CONFARGS += -Defi_os_dir=debian
+	CONFARGS += -Defi_sbat_distro_id=debian
 	CONFARGS += -Defi_sbat_distro_summary=Debian
 	CONFARGS += -Defi_sbat_distro_pkgname=fwupd
 	CONFARGS += -Defi_sbat_distro_version=$(deb_version)
