ccgx: Add FuFirmware->write() for DMC firmware so the parser can be fuzzed
This also fixes all the of the big endian bugs when parsing firmware.

--- a/plugins/ccgx/meson.build
+++ b/plugins/ccgx/meson.build
@@ -17,8 +17,8 @@ shared_module('fu_plugin_ccgx',
     'fu-ccgx-hpi-common.c',
     'fu-ccgx-hpi-device.c',
     'fu-ccgx-dmc-device.c',
-    'fu-ccgx-dmc-firmware.c',
-    'fu-ccgx-dmc-common.c',
+    'fu-ccgx-dmc-firmware.c',   # fuzzing
+    'fu-ccgx-dmc-common.c',     # fuzzing
   ],
   include_directories : [
     root_incdir,
