pixart: Fuzz the firmware parser

--- a/plugins/pixart-rf/meson.build
+++ b/plugins/pixart-rf/meson.build
@@ -9,7 +9,7 @@ shared_module('fu_plugin_pixart_rf',
   sources : [
     'fu-plugin-pixart-rf.c',
     'fu-pxi-device.c',
-    'fu-pxi-firmware.c',
+    'fu-pxi-firmware.c',      # fuzzing
   ],
   include_directories : [
     root_incdir,
