--- a/plugins/uefi-capsule/efi/meson.build
+++ b/plugins/uefi-capsule/efi/meson.build
@@ -156,7 +156,7 @@ so = custom_target('fwup.so',
 
 # sanity check the packager set this to *SOMETHING*
 if get_option('efi_sbat_distro_id') == '' and get_option('supported_build')
-    error('-Defi_sbat_distro_id is unset, see plugins/uefi-capsule/README.md')
+    warning('-Defi_sbat_distro_id is unset, see plugins/uefi-capsule/README.md')
 endif
 
 app = custom_target(efi_name,
