--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -160,11 +160,13 @@ Data files for installed tests.
 %if 0%{?have_uefi}
     -Dplugin_uefi=true \
     -Dplugin_nvme=true \
+%ifarch x86_64
     -Defi_sbat_distro_id="fedora" \
     -Defi_sbat_distro_summary="The Fedora Project" \
     -Defi_sbat_distro_pkgname="%{name}" \
     -Defi_sbat_distro_version="%{version}" \
     -Defi_sbat_distro_url="https://src.fedoraproject.org/rpms/%{name}" \
+%endif
 %else
     -Dplugin_uefi=false \
     -Dplugin_nvme=false \
