--- a/meson_options.txt
+++ b/meson_options.txt
@@ -18,6 +18,7 @@ option('plugin_dummy', type : 'boolean', value : false, description : 'enable th
 option('plugin_emmc', type : 'boolean', value : true, description : 'enable eMMC support')
 option('plugin_synaptics_mst', type: 'boolean', value: true, description : 'enable Synaptics MST hub support')
 option('plugin_synaptics_rmi', type: 'boolean', value: true, description : 'enable Synaptics RMI support')
+option('plugin_tpm', type : 'boolean', value : true, description : 'enable TPM support')
 option('plugin_thunderbolt', type : 'boolean', value : true, description : 'enable Thunderbolt support')
 option('plugin_redfish', type : 'boolean', value : true, description : 'enable Redfish support')
 option('plugin_uefi_capsule', type : 'boolean', value : true, description : 'enable UEFI capsule support')
@@ -32,7 +33,6 @@ option('systemd', type : 'boolean', value : true, description : 'enable systemd 
 option('systemd_root_prefix', type: 'string', value: '', description: 'Directory to base systemd’s installation directories on')
 option('elogind', type : 'boolean', value : false, description : 'enable elogind support')
 option('tests', type : 'boolean', value : true, description : 'enable tests')
-option('tpm', type : 'boolean', value : true, description : 'enable TPM support')
 option('soup_session_compat', type : 'boolean', value : true, description : 'enable SoupSession runtime compatibility support')
 option('curl', type : 'boolean', value : true, description : 'enable libcurl support')
 option('udevdir', type: 'string', value: '', description: 'Directory for udev rules')
