--- a/meson.build
+++ b/meson.build
@@ -335,7 +335,7 @@ if cc.has_function('pwrite', args : '-D_XOPEN_SOURCE')
   conf.set('HAVE_PWRITE', '1')
 endif
 
-if build_standalone and get_option('tpm')
+if build_standalone and get_option('plugin_tpm')
   tpm2tss = dependency('tss2-esys', version : '>= 2.0')
   conf.set('HAVE_TSS2', '1')
 else
