--- a/plugins/ccgx/meson.build
+++ b/plugins/ccgx/meson.build
@@ -1,3 +1,4 @@
+if get_option('gusb')
 cargs = ['-DG_LOG_DOMAIN="FuPluginCcgx"']
 
 install_data([
@@ -37,3 +38,4 @@ shared_module('fu_plugin_ccgx',
     gudev,
   ],
 )
+endif
