--- a/plugins/synaptics-mst/meson.build
+++ b/plugins/synaptics-mst/meson.build
@@ -1,3 +1,7 @@
+if get_option('plugin_synaptics_mst')
+if not get_option('gudev')
+  error('gudev is required for plugin_synaptics_mst')
+endif
 cargs = ['-DG_LOG_DOMAIN="FuPluginSynapticsMST"']
 
 install_data(['synaptics-mst.quirk'],
@@ -66,4 +70,5 @@ if get_option('tests')
     install_dir : installed_test_bindir,
   )
   test('synaptics-mst-self-test', e, env: testdatadirs)
+endif
 endif
