csr: Rename plugin to dfu-csr as it depends on the prefixed plugin

--- a/plugins/dfu-csr/meson.build
+++ b/plugins/dfu-csr/meson.build
@@ -1,14 +1,14 @@
-cargs = ['-DG_LOG_DOMAIN="FuPluginCsr"']
+cargs = ['-DG_LOG_DOMAIN="FuPluginDfuCsr"']
 
-install_data(['csr-aiaiai.quirk'],
+install_data(['dfu-csr.quirk'],
   install_dir: join_paths(datadir, 'fwupd', 'quirks.d')
 )
 
-shared_module('fu_plugin_csr',
+shared_module('fu_plugin_dfu_csr',
   fu_hash,
   sources : [
-    'fu-csr-device.c',
-    'fu-plugin-csr.c',
+    'fu-dfu-csr-device.c',
+    'fu-plugin-dfu-csr.c',
   ],
   include_directories : [
     root_incdir,
