--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Continuous Integration
 on:
   push:
-    branches: [ master ]
+    branches: [ 1_4_X ]
   pull_request:
-    branches: [ master ]
+    branches: [ 1_4_X ]
 
 jobs:
   abi:
